# promo-ai

./: .gitignore  README.md  pyproject.toml
promo_ai/: chat_app.py  main.py  promo_json.py  prompts.py  react_agent.py
