[tool.poetry]
name = "promo-ai"
version = "0.1.0"
description = "Promo codes AI Tool POC"
authors = ["edwardheaver <ed.heaver@justpark.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

ollama = "^0.2.0"
llama-index = "^0.10.38"


llama-index-llms-ollama = "^0.1.4"
[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "promo_ai.main:main"
